# sasp-ibd

./: .gitignore  AGENTS.md  README.md  pyproject.toml
outputs/deconv/: SUMMARY.md  deconv_features_long.tsv  deconv_incremental_vs_senmayo.tsv  ibd_combined_broad_signature.tsv  martin_cd_qc_broad_signature.tsv  signature_celltype_counts.tsv  signature_marker_genes.tsv  smillie_uc_qc_broad_signature.tsv
outputs/drugtarget_mr/: SUMMARY.md  trial_outcomes.tsv
research_journal/: README.md
research_journal/docs/: FINDINGS_FOR_WRITEUP.md  IBD_aging_project_plan.md  METHODS_AND_NARRATIVE.md  PIVOT_2026-06-23_causal_refractory_module.md  RESULTS_SUMMARY.md  (+3 more)
results/: README.md
src/: 01_gtex_samples.py  02_build_clock.py  03_parse_geo.py  04_apply_clock.py  05_reversal_analysis.py  06_predictor.py  07_senescence.py  08_activity.py  09_report.py  10_senescence_main.py  11_incremental.py  12_fetch_eqtl.py  13_build_instruments.py  14_mr.py  15_coloc.py  16_triangulate.py  17_integrated_figure.py  18_mvmr.py  19_reverse_mr.py  20_ltl_mr.py  21_replicate_finngen.py  22_harvest_cohorts.py  23_score_all.py  24_loco_meta.py  25_inflammation_adjust.py  26_immune_eqtl_multicontext.py  27_causal_hardening.py  28_causal_hardening2.py  29_deconv_response.py  30_drugtarget_mr.py  31_cxcr2_mechanism.py  44_drugtarget_evidence_tiers.py  49_phewas_axis.py  51_scrnaseq_cxcr2_mechanism.py  causal_module_utils.py  paths.py  sc_01_qc.py  sc_02_senescence.py  sc_03_foundation_perturb.py  sc_04_cellcomm.py  (+4 more)
tools/: setup_remote_env.sh  smoke_test_task2.py  sync_pull.sh  sync_push.sh
(+52 files in other folders)
